--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Absensi Teens & Youth Mundu</title>
   <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -24,4 +25,5 @@
   <script src="js/firebase.js"></script>
   <script src="js/auth.js"></script>
 </body>
+
 </html>
