--- a/petugas.html
+++ b/petugas.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Petugas | Absensi Teens & Youth Mundu</title>
   <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -36,3 +37,4 @@
 </body>
 
 </html>
+
