--- a/petugas-tanggal.html
+++ b/petugas-tanggal.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Pilih Tanggal | Absensi</title>
+  <title>Pilih Tanggal Ibadah</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
 </head>
