--- a/petugas-tanggal.html
+++ b/petugas-tanggal.html
@@ -13,8 +13,11 @@
 <div class="card" id="tanggalContainer"></div>
 
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+
 <script src="js/firebase.js"></script>
-<script src="js/petugas-tanggal.js"></script>
+<script src="js/petugas-absen.js"></script>
 
 </body>
 </html>
