--- a/petugas-bulan.html
+++ b/petugas-bulan.html
@@ -8,16 +8,14 @@
 </head>
 <body>
 
-<h2>Pilih Bulan Ibadah</h2>
+  <h2>Pilih Bulan Ibadah</h2>
 
-<div class="card" id="bulanContainer"></div>
+  <div class="card">
+    <div id="bulanContainer"></div>
+  </div>
 
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-
-<script src="js/firebase.js"></script>
-<script src="js/petugas-absen.js"></script>
+  <!-- TIDAK LOAD FIREBASE DI SINI -->
+  <script src="js/petugas-bulan.js"></script>
 
 </body>
 </html>
