--- a/petugas-tanggal.html
+++ b/petugas-tanggal.html
@@ -8,16 +8,14 @@
 </head>
 <body>
 
-<h2>Pilih Tanggal Ibadah</h2>
+  <h2 id="judulBulan"></h2>
 
-<div class="card" id="tanggalContainer"></div>
+  <div class="card">
+    <div id="tanggalContainer"></div>
+  </div>
 
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-
-<script src="js/firebase.js"></script>
-<script src="js/petugas-absen.js"></script>
+  <!-- TIDAK LOAD FIREBASE -->
+  <script src="js/petugas-tanggal.js"></script>
 
 </body>
 </html>
