--- a/petugas-absen.html
+++ b/petugas-absen.html
@@ -8,23 +8,25 @@
 </head>
 <body>
 
-<h2 id="judulTanggal"></h2>
+  <h2 id="judulTanggal"></h2>
 
-<div class="card">
-  <h4>Tambah Nama Jemaat</h4>
-  <input type="text" id="namaBaru" placeholder="Nama Jemaat">
-  <button onclick="tambahJemaat()">Tambah</button>
+  <div class="card">
+    <div id="listAbsensi"></div>
 
-  <hr>
+    <br>
+    <button onclick="logout()">Logout</button>
+  </div>
 
-  <div id="listAbsensi"></div>
-</div>
+  <!-- FIREBASE SDK (WAJIB & URUT) -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-<script src="js/firebase.js"></script>
-<script src="js/petugas-absen.js"></script>
+  <!-- INIT FIREBASE -->
+  <script src="js/firebase.js"></script>
+
+  <!-- LOGIC ABSENSI -->
+  <script src="js/petugas-absen.js"></script>
 
 </body>
 </html>
