--- a/admin.html
+++ b/admin.html
@@ -18,6 +18,12 @@
   <input type="text" id="namaJemaat" placeholder="Nama Jemaat">
   <button onclick="tambahJemaat()">Tambah</button>
 
+   <hr>
+<h3>Laporan Kehadiran</h3>
+<button onclick="window.location.href='admin-laporan.html'">
+  Lihat Laporan Absensi
+</button>
+
   <h3>Daftar Jemaat</h3>
   <ul id="listJemaat"></ul>
 
@@ -35,4 +41,5 @@
 </body>
 
 </html>
+
 
