--- a/petugas.html
+++ b/petugas.html
@@ -1,3 +1,7 @@
+<meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -66,3 +70,4 @@
 
 </body>
 </html>
+
