--- a/admin-laporan.html
+++ b/admin-laporan.html
@@ -52,4 +52,11 @@
 <script src="js/admin-laporan.js"></script>
 
 </body>
+  <script>
+  window.addEventListener("pageshow", function (event) {
+    if (event.persisted) {
+      window.location.reload();
+    }
+  });
+</script>
 </html>
