--- a/admin.html
+++ b/admin.html
@@ -43,8 +43,16 @@
   <script src="js/firebase.js"></script>
   <script src="js/admin.js"></script>
 </body>
+  <script>
+  window.addEventListener("pageshow", function (event) {
+    if (event.persisted) {
+      window.location.reload();
+    }
+  });
+</script>
 
 </html>
+
 
 
 
