--- a/petugas-absen.html
+++ b/petugas-absen.html
@@ -33,4 +33,11 @@
   <script src="js/petugas-absen.js"></script>
 
 </body>
+  <script>
+  window.addEventListener("pageshow", function (event) {
+    if (event.persisted) {
+      window.location.reload();
+    }
+  });
+</script>
 </html>
