--- a/petugas-tanggal.html
+++ b/petugas-tanggal.html
@@ -22,4 +22,11 @@
   <script src="js/petugas-tanggal.js"></script>
 
 </body>
+  <script>
+  window.addEventListener("pageshow", function (event) {
+    if (event.persisted) {
+      window.location.reload();
+    }
+  });
+</script>
 </html>
