--- a/petugas.html
+++ b/petugas.html
@@ -69,5 +69,13 @@
   <script src="js/petugas.js"></script>
 
 </body>
+  <script>
+  window.addEventListener("pageshow", function (event) {
+    if (event.persisted) {
+      window.location.reload();
+    }
+  });
+</script>
 </html>
+
 
