--- a/petugas-bulan.html
+++ b/petugas-bulan.html
@@ -1,32 +1,27 @@
-<meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
-<meta http-equiv="Pragma" content="no-cache">
-<meta http-equiv="Expires" content="0">
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
   <meta charset="UTF-8">
   <title>Pilih Bulan Ibadah</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Anti cache -->
+  <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
+
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-  <h2>Pilih Bulan Ibadah</h2>
+<h2>Pilih Bulan Ibadah</h2>
 
-  <div class="card">
-    <div id="bulanContainer"></div>
-  </div>
+<div class="card">
+  <div id="bulanContainer"></div>
+</div>
 
-  <!-- TIDAK LOAD FIREBASE DI SINI -->
-  <script src="js/petugas-bulan.js"></script>
+<!-- ⚠️ JANGAN LOAD FIREBASE DI SINI -->
+<script src="js/petugas-bulan.js"></script>
 
 </body>
-  <script>
-  window.addEventListener("pageshow", function (event) {
-    if (event.persisted) {
-      window.location.reload();
-    }
-  });
-</script>
 </html>
