--- a/petugas-tanggal.html
+++ b/petugas-tanggal.html
@@ -1,32 +1,27 @@
-<meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
-<meta http-equiv="Pragma" content="no-cache">
-<meta http-equiv="Expires" content="0">
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
   <meta charset="UTF-8">
   <title>Pilih Tanggal Ibadah</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Anti cache -->
+  <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
+
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-  <h2 id="judulBulan"></h2>
+<h2 id="judulBulan">Pilih Tanggal Ibadah</h2>
 
-  <div class="card">
-    <div id="tanggalContainer"></div>
-  </div>
+<div class="card">
+  <div id="tanggalContainer"></div>
+</div>
 
-  <!-- TIDAK LOAD FIREBASE -->
-  <script src="js/petugas-tanggal.js"></script>
+<!-- ⚠️ JANGAN LOAD FIREBASE -->
+<script src="js/petugas-tanggal.js"></script>
 
 </body>
-  <script>
-  window.addEventListener("pageshow", function (event) {
-    if (event.persisted) {
-      window.location.reload();
-    }
-  });
-</script>
 </html>
