--- a/petugas-absen.html
+++ b/petugas-absen.html
@@ -34,10 +34,17 @@
 
   <script>
   window.addEventListener("pageshow", function (event) {
+    // Jika halaman dibuka dari cache (Back / Forward)
     if (event.persisted) {
-      window.location.reload();
+      window.location.replace("index.html");
     }
   });
+
+  // Tambahan: jika user tekan Back dan halaman reload
+  if (performance.getEntriesByType("navigation")[0]?.type === "back_forward") {
+    window.location.replace("index.html");
+  }
+</script>
 </body>
   
 </script>
