--- a/petugas-absen.html
+++ b/petugas-absen.html
@@ -9,6 +9,20 @@
   <title>Absensi Ibadah</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
+
+  <style>
+  /* Perbesar checkbox khusus halaman absensi */
+  input[type="checkbox"] {
+    transform: scale(1.6);   /* ubah ke 1.8 / 2 kalau mau lebih besar */
+    margin-right: 12px;
+  }
+
+  /* Supaya baris nyaman disentuh */
+  #list {
+    font-size: 18px;
+    line-height: 2.2;
+  }
+</style>
 </head>
 <body>
 
