--- a/petugas-bulan.html
+++ b/petugas-bulan.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+<button class="btn-logout" onclick="logout()">Logout</button>
 <h2>Pilih Bulan Ibadah</h2>
 
 <div class="card">
