--- a/petugas-tanggal.html
+++ b/petugas-tanggal.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+<button class="btn-logout" onclick="logout()">Logout</button>
 <h2 id="judulBulan">Pilih Tanggal Ibadah</h2>
 
 <div class="card">
