--- a/petugas-absen.html
+++ b/petugas-absen.html
@@ -25,7 +25,7 @@
 </style>
 </head>
 <body>
-
+<button class="btn-logout" onclick="logout()">Logout</button>
   <h2 id="judulTanggal"></h2>
 
   <div class="card">
