--- a/petugas-absen.html
+++ b/petugas-absen.html
@@ -59,6 +59,17 @@
     window.location.replace("index.html");
   }
 </script>
+  <script>
+  // Jika halaman dibuka SETELAH logout (Back / refresh)
+  if (sessionStorage.getItem("isLogout") === "1") {
+    window.location.replace("index.html");
+  }
+
+  // Jika user login ulang, hapus tanda logout
+  window.addEventListener("pageshow", function () {
+    sessionStorage.removeItem("isLogout");
+  });
+</script>
 </body>
   
 </script>
