--- a/petugas-tanggal.html
+++ b/petugas-tanggal.html
@@ -5,47 +5,79 @@
   <title>Pilih Tanggal Ibadah</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Anti cache -->
-  <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
-  <meta http-equiv="Pragma" content="no-cache">
-  <meta http-equiv="Expires" content="0">
-
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-<button class="btn-logout" onclick="logout()">Logout</button>
-<h2 id="judulBulan">Pilih Tanggal Ibadah</h2>
 
-<div class="card">
-  <div id="tanggalContainer"></div>
-</div>
+  <!-- Tombol logout floating -->
+  <button class="btn-logout" onclick="logout()">Logout</button>
 
-<!-- ⚠️ JANGAN LOAD FIREBASE -->
-<script src="js/petugas-tanggal.js"></script>
+  <h2 id="judulBulan"></h2>
+
+  <div class="card">
+    <div id="tanggalContainer"></div>
+  </div>
+
+  <!-- Firebase (HANYA untuk logout) -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+
+  <script src="js/firebase.js"></script>
 
   <script>
-  window.addEventListener("pageshow", function (event) {
-    // Jika halaman dibuka dari cache (Back / Forward)
-    if (event.persisted) {
-      window.location.replace("index.html");
+    const params = new URLSearchParams(window.location.search);
+    const bulanIndex = parseInt(params.get("bulan"));
+
+    const namaBulan = [
+      "Januari", "Februari", "Maret", "April",
+      "Mei", "Juni", "Juli", "Agustus",
+      "September", "Oktober", "November", "Desember"
+    ];
+
+    const tahun = 2026;
+
+    if (isNaN(bulanIndex)) {
+      document.getElementById("judulBulan").innerText = "Bulan tidak valid";
+    } else {
+      document.getElementById("judulBulan").innerText =
+        `Pilih Tanggal Ibadah – ${namaBulan[bulanIndex]} ${tahun}`;
+
+      const container = document.getElementById("tanggalContainer");
+      const lastDay = new Date(tahun, bulanIndex + 1, 0).getDate();
+
+      for (let tgl = 1; tgl <= lastDay; tgl++) {
+        const date = new Date(tahun, bulanIndex, tgl);
+
+        // hanya hari Minggu
+        if (date.getDay() === 0) {
+          const dd = String(tgl).padStart(2, "0");
+          const label = `${dd} ${namaBulan[bulanIndex]} ${tahun}`;
+          const iso =
+            `${tahun}-${String(bulanIndex + 1).padStart(2, "0")}-${dd}`;
+
+          const btn = document.createElement("button");
+          btn.textContent = label;
+          btn.style.display = "block";
+          btn.style.width = "100%";
+          btn.style.marginBottom = "10px";
+
+          btn.onclick = () => {
+            window.location.href =
+              `petugas-absen.html?tanggal=${iso}&label=${encodeURIComponent(label)}`;
+          };
+
+          container.appendChild(btn);
+        }
+      }
     }
-  });
 
-  // Tambahan: jika user tekan Back dan halaman reload
-  if (performance.getEntriesByType("navigation")[0]?.type === "back_forward") {
-    window.location.replace("index.html");
-  }
-</script>
-  <script>
-  // Jika halaman dibuka SETELAH logout (Back / refresh)
-  if (sessionStorage.getItem("isLogout") === "1") {
-    window.location.replace("index.html");
-  }
+    function logout() {
+      auth.signOut().then(() => {
+        window.location.replace("index.html");
+      });
+    }
+  </script>
 
-  // Jika user login ulang, hapus tanda logout
-  window.addEventListener("pageshow", function () {
-    sessionStorage.removeItem("isLogout");
-  });
-</script>
 </body>
 </html>
