--- a/petugas-tanggal.html
+++ b/petugas-tanggal.html
@@ -4,80 +4,63 @@
   <meta charset="UTF-8">
   <title>Pilih Tanggal Ibadah</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
-  <!-- Tombol logout floating -->
-  <button class="btn-logout" onclick="logout()">Logout</button>
+<button class="btn-logout" onclick="logout()">Logout</button>
 
-  <h2 id="judulBulan"></h2>
+<h2 id="judulBulan"></h2>
+<div class="card">
+  <div id="tanggalContainer"></div>
+</div>
 
-  <div class="card">
-    <div id="tanggalContainer"></div>
-  </div>
+<!-- Firebase -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+<script src="js/firebase.js"></script>
 
-  <!-- Firebase (HANYA untuk logout) -->
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+<script>
+/* 🔐 AUTH CHECK HALUS */
+if (!auth.currentUser) {
+  window.location.replace("index.html");
+}
 
-  <script src="js/firebase.js"></script>
+/* LOGIC TANGGAL */
+const params = new URLSearchParams(location.search);
+const bulanIndex = parseInt(params.get("bulan"));
+const namaBulan = [
+  "Januari","Februari","Maret","April","Mei","Juni",
+  "Juli","Agustus","September","Oktober","November","Desember"
+];
+const tahun = 2026;
 
-  <script>
-    const params = new URLSearchParams(window.location.search);
-    const bulanIndex = parseInt(params.get("bulan"));
+document.getElementById("judulBulan").innerText =
+  `Pilih Tanggal Ibadah – ${namaBulan[bulanIndex]} ${tahun}`;
 
-    const namaBulan = [
-      "Januari", "Februari", "Maret", "April",
-      "Mei", "Juni", "Juli", "Agustus",
-      "September", "Oktober", "November", "Desember"
-    ];
+const container = document.getElementById("tanggalContainer");
+const lastDay = new Date(tahun, bulanIndex + 1, 0).getDate();
 
-    const tahun = 2026;
+for (let tgl = 1; tgl <= lastDay; tgl++) {
+  const d = new Date(tahun, bulanIndex, tgl);
+  if (d.getDay() === 0) {
+    const dd = String(tgl).padStart(2, "0");
+    const label = `${dd} ${namaBulan[bulanIndex]} ${tahun}`;
+    const iso = `${tahun}-${String(bulanIndex + 1).padStart(2,"0")}-${dd}`;
 
-    if (isNaN(bulanIndex)) {
-      document.getElementById("judulBulan").innerText = "Bulan tidak valid";
-    } else {
-      document.getElementById("judulBulan").innerText =
-        `Pilih Tanggal Ibadah – ${namaBulan[bulanIndex]} ${tahun}`;
+    const btn = document.createElement("button");
+    btn.textContent = label;
+    btn.onclick = () =>
+      location.href = `petugas-absen.html?tanggal=${iso}&label=${encodeURIComponent(label)}`;
+    container.appendChild(btn);
+  }
+}
 
-      const container = document.getElementById("tanggalContainer");
-      const lastDay = new Date(tahun, bulanIndex + 1, 0).getDate();
-
-      for (let tgl = 1; tgl <= lastDay; tgl++) {
-        const date = new Date(tahun, bulanIndex, tgl);
-
-        // hanya hari Minggu
-        if (date.getDay() === 0) {
-          const dd = String(tgl).padStart(2, "0");
-          const label = `${dd} ${namaBulan[bulanIndex]} ${tahun}`;
-          const iso =
-            `${tahun}-${String(bulanIndex + 1).padStart(2, "0")}-${dd}`;
-
-          const btn = document.createElement("button");
-          btn.textContent = label;
-          btn.style.display = "block";
-          btn.style.width = "100%";
-          btn.style.marginBottom = "10px";
-
-          btn.onclick = () => {
-            window.location.href =
-              `petugas-absen.html?tanggal=${iso}&label=${encodeURIComponent(label)}`;
-          };
-
-          container.appendChild(btn);
-        }
-      }
-    }
-
-    function logout() {
-      auth.signOut().then(() => {
-        window.location.replace("index.html");
-      });
-    }
-  </script>
+function logout() {
+  auth.signOut().then(() => location.replace("index.html"));
+}
+</script>
 
 </body>
 </html>
