--- a/petugas-tanggal.html
+++ b/petugas-tanggal.html
@@ -1,66 +1,53 @@
-<!DOCTYPE html>
-<html lang="id">
-<head>
-  <meta charset="UTF-8">
-  <title>Pilih Tanggal Ibadah</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-
-<body>
-
-<button class="btn-logout" onclick="logout()">Logout</button>
-
-<h2 id="judulBulan"></h2>
-<div class="card">
-  <div id="tanggalContainer"></div>
-</div>
-
-<!-- Firebase -->
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-<script src="js/firebase.js"></script>
-
 <script>
-/* 🔐 AUTH CHECK HALUS */
-if (!auth.currentUser) {
-  window.location.replace("index.html");
-}
-
-/* LOGIC TANGGAL */
-const params = new URLSearchParams(location.search);
-const bulanIndex = parseInt(params.get("bulan"));
-const namaBulan = [
-  "Januari","Februari","Maret","April","Mei","Juni",
-  "Juli","Agustus","September","Oktober","November","Desember"
-];
-const tahun = 2026;
-
-document.getElementById("judulBulan").innerText =
-  `Pilih Tanggal Ibadah – ${namaBulan[bulanIndex]} ${tahun}`;
-
-const container = document.getElementById("tanggalContainer");
-const lastDay = new Date(tahun, bulanIndex + 1, 0).getDate();
-
-for (let tgl = 1; tgl <= lastDay; tgl++) {
-  const d = new Date(tahun, bulanIndex, tgl);
-  if (d.getDay() === 0) {
-    const dd = String(tgl).padStart(2, "0");
-    const label = `${dd} ${namaBulan[bulanIndex]} ${tahun}`;
-    const iso = `${tahun}-${String(bulanIndex + 1).padStart(2,"0")}-${dd}`;
-
-    const btn = document.createElement("button");
-    btn.textContent = label;
-    btn.onclick = () =>
-      location.href = `petugas-absen.html?tanggal=${iso}&label=${encodeURIComponent(label)}`;
-    container.appendChild(btn);
+auth.onAuthStateChanged(user => {
+  if (!user) {
+    window.location.replace("index.html");
+    return;
   }
-}
+
+  // ===== LOGIC HALAMAN TANGGAL =====
+  const params = new URLSearchParams(location.search);
+  const bulanIndex = parseInt(params.get("bulan"));
+
+  const namaBulan = [
+    "Januari","Februari","Maret","April","Mei","Juni",
+    "Juli","Agustus","September","Oktober","November","Desember"
+  ];
+
+  const tahun = 2026;
+
+  document.getElementById("judulBulan").innerText =
+    `Pilih Tanggal Ibadah – ${namaBulan[bulanIndex]} ${tahun}`;
+
+  const container = document.getElementById("tanggalContainer");
+  const lastDay = new Date(tahun, bulanIndex + 1, 0).getDate();
+
+  for (let tgl = 1; tgl <= lastDay; tgl++) {
+    const d = new Date(tahun, bulanIndex, tgl);
+
+    if (d.getDay() === 0) {
+      const dd = String(tgl).padStart(2, "0");
+      const label = `${dd} ${namaBulan[bulanIndex]} ${tahun}`;
+      const iso =
+        `${tahun}-${String(bulanIndex + 1).padStart(2,"0")}-${dd}`;
+
+      const btn = document.createElement("button");
+      btn.textContent = label;
+      btn.style.display = "block";
+      btn.style.width = "100%";
+      btn.style.marginBottom = "10px";
+
+      btn.onclick = () => {
+        location.href =
+          `petugas-absen.html?tanggal=${iso}&label=${encodeURIComponent(label)}`;
+      };
+
+      container.appendChild(btn);
+    }
+  }
+});
 
 function logout() {
   auth.signOut().then(() => location.replace("index.html"));
 }
 </script>
-
-</body>
-</html>
