--- a/petugas-tanggal.html
+++ b/petugas-tanggal.html
@@ -9,6 +9,11 @@ auth.onAuthStateChanged(user => {
   const params = new URLSearchParams(location.search);
   const bulanIndex = parseInt(params.get("bulan"));
 
+  if (isNaN(bulanIndex)) {
+    document.getElementById("judulBulan").innerText = "Bulan tidak valid";
+    return;
+  }
+
   const namaBulan = [
     "Januari","Februari","Maret","April","Mei","Juni",
     "Juli","Agustus","September","Oktober","November","Desember"
@@ -20,11 +25,14 @@ auth.onAuthStateChanged(user => {
     `Pilih Tanggal Ibadah – ${namaBulan[bulanIndex]} ${tahun}`;
 
   const container = document.getElementById("tanggalContainer");
+  container.innerHTML = ""; // ⬅️ PENTING
+
   const lastDay = new Date(tahun, bulanIndex + 1, 0).getDate();
 
   for (let tgl = 1; tgl <= lastDay; tgl++) {
     const d = new Date(tahun, bulanIndex, tgl);
 
+    // HANYA hari Minggu
     if (d.getDay() === 0) {
       const dd = String(tgl).padStart(2, "0");
       const label = `${dd} ${namaBulan[bulanIndex]} ${tahun}`;
@@ -38,7 +46,7 @@ auth.onAuthStateChanged(user => {
       btn.style.marginBottom = "10px";
 
       btn.onclick = () => {
-        location.href =
+        window.location.href =
           `petugas-absen.html?tanggal=${iso}&label=${encodeURIComponent(label)}`;
       };
 
@@ -48,6 +56,8 @@ auth.onAuthStateChanged(user => {
 });
 
 function logout() {
-  auth.signOut().then(() => location.replace("index.html"));
+  auth.signOut().then(() => {
+    window.location.replace("index.html");
+  });
 }
 </script>
