--- a/petugas-tanggal.html
+++ b/petugas-tanggal.html
@@ -1,38 +1,56 @@
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <title>Pilih Tanggal Ibadah</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+
+<button class="btn-logout" onclick="logout()">Logout</button>
+
+<h2 id="judulBulan"></h2>
+
+<div class="card">
+  <div id="tanggalContainer"></div>
+</div>
+
+<!-- Firebase (HANYA untuk logout) -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+<script src="js/firebase.js"></script>
+
 <script>
-auth.onAuthStateChanged(user => {
-  if (!user) {
-    window.location.replace("index.html");
-    return;
-  }
+/* ===============================
+   LOGIC TANGGAL (TANPA AUTH)
+================================ */
+const params = new URLSearchParams(window.location.search);
+const bulanIndex = parseInt(params.get("bulan"));
 
-  // ===== LOGIC HALAMAN TANGGAL =====
-  const params = new URLSearchParams(location.search);
-  const bulanIndex = parseInt(params.get("bulan"));
+const namaBulan = [
+  "Januari","Februari","Maret","April","Mei","Juni",
+  "Juli","Agustus","September","Oktober","November","Desember"
+];
 
-  if (isNaN(bulanIndex)) {
-    document.getElementById("judulBulan").innerText = "Bulan tidak valid";
-    return;
-  }
+const tahun = 2026;
 
-  const namaBulan = [
-    "Januari","Februari","Maret","April","Mei","Juni",
-    "Juli","Agustus","September","Oktober","November","Desember"
-  ];
-
-  const tahun = 2026;
-
+if (isNaN(bulanIndex)) {
+  document.getElementById("judulBulan").innerText = "Bulan tidak valid";
+} else {
   document.getElementById("judulBulan").innerText =
     `Pilih Tanggal Ibadah – ${namaBulan[bulanIndex]} ${tahun}`;
 
   const container = document.getElementById("tanggalContainer");
-  container.innerHTML = ""; // ⬅️ PENTING
+  container.innerHTML = "";
 
   const lastDay = new Date(tahun, bulanIndex + 1, 0).getDate();
 
   for (let tgl = 1; tgl <= lastDay; tgl++) {
     const d = new Date(tahun, bulanIndex, tgl);
 
-    // HANYA hari Minggu
+    // hanya hari Minggu
     if (d.getDay() === 0) {
       const dd = String(tgl).padStart(2, "0");
       const label = `${dd} ${namaBulan[bulanIndex]} ${tahun}`;
@@ -53,7 +71,7 @@ auth.onAuthStateChanged(user => {
       container.appendChild(btn);
     }
   }
-});
+}
 
 function logout() {
   auth.signOut().then(() => {
@@ -61,3 +79,6 @@ function logout() {
   });
 }
 </script>
+
+</body>
+</html>
