--- a/petugas-bulan.html
+++ b/petugas-bulan.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>Pilih Bulan Ibadah</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -19,37 +18,48 @@
     <div id="bulanContainer"></div>
   </div>
 
-  <!-- Firebase (HANYA untuk logout) -->
+  <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-
   <script src="js/firebase.js"></script>
 
   <script>
-    const bulan = [
-      "Januari", "Februari", "Maret", "April",
-      "Mei", "Juni", "Juli", "Agustus",
-      "September", "Oktober", "November", "Desember"
-    ];
+    // 🔐 AUTH CHECK KHUSUS HALAMAN BULAN
+    auth.onAuthStateChanged(user => {
+      if (!user) {
+        // jika sudah logout, jangan boleh lihat halaman bulan
+        window.location.replace("index.html");
+        return;
+      }
 
-    const container = document.getElementById("bulanContainer");
+      // ===== LOGIC HALAMAN BULAN =====
+      const bulan = [
+        "Januari", "Februari", "Maret", "April",
+        "Mei", "Juni", "Juli", "Agustus",
+        "September", "Oktober", "November", "Desember"
+      ];
 
-    bulan.forEach((nama, index) => {
-      const btn = document.createElement("button");
-      btn.textContent = nama;
-      btn.style.display = "block";
-      btn.style.width = "100%";
-      btn.style.marginBottom = "10px";
+      const container = document.getElementById("bulanContainer");
+      container.innerHTML = "";
 
-      btn.onclick = () => {
-        window.location.href = `petugas-tanggal.html?bulan=${index}`;
-      };
+      bulan.forEach((nama, index) => {
+        const btn = document.createElement("button");
+        btn.textContent = nama;
+        btn.style.display = "block";
+        btn.style.width = "100%";
+        btn.style.marginBottom = "10px";
 
-      container.appendChild(btn);
+        btn.onclick = () => {
+          window.location.href = `petugas-tanggal.html?bulan=${index}`;
+        };
+
+        container.appendChild(btn);
+      });
     });
 
     function logout() {
       auth.signOut().then(() => {
+        // replace = hapus halaman bulan dari history
         window.location.replace("index.html");
       });
     }
