--- a/petugas-tanggal.html
+++ b/petugas-tanggal.html
@@ -17,28 +17,36 @@
   <div id="tanggalContainer"></div>
 </div>
 
-<!-- Firebase (HANYA untuk logout) -->
+<!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 <script src="js/firebase.js"></script>
 
 <script>
-/* ===============================
-   LOGIC TANGGAL (TANPA AUTH)
-================================ */
-const params = new URLSearchParams(window.location.search);
-const bulanIndex = parseInt(params.get("bulan"));
+/* 🔐 AUTH CHECK HALAMAN TANGGAL */
+auth.onAuthStateChanged(user => {
+  if (!user) {
+    // kalau sudah logout, jangan boleh masuk halaman tanggal
+    window.location.replace("index.html");
+    return;
+  }
 
-const namaBulan = [
-  "Januari","Februari","Maret","April","Mei","Juni",
-  "Juli","Agustus","September","Oktober","November","Desember"
-];
+  // ===== LOGIC TANGGAL =====
+  const params = new URLSearchParams(window.location.search);
+  const bulanIndex = parseInt(params.get("bulan"));
 
-const tahun = 2026;
+  const namaBulan = [
+    "Januari","Februari","Maret","April","Mei","Juni",
+    "Juli","Agustus","September","Oktober","November","Desember"
+  ];
 
-if (isNaN(bulanIndex)) {
-  document.getElementById("judulBulan").innerText = "Bulan tidak valid";
-} else {
+  const tahun = 2026;
+
+  if (isNaN(bulanIndex)) {
+    document.getElementById("judulBulan").innerText = "Bulan tidak valid";
+    return;
+  }
+
   document.getElementById("judulBulan").innerText =
     `Pilih Tanggal Ibadah – ${namaBulan[bulanIndex]} ${tahun}`;
 
@@ -71,7 +79,7 @@ if (isNaN(bulanIndex)) {
       container.appendChild(btn);
     }
   }
-}
+});
 
 function logout() {
   auth.signOut().then(() => {
