--- a/petugas-absen.html
+++ b/petugas-absen.html
@@ -43,6 +43,14 @@
 
   <!-- LOGIC ABSENSI -->
   <script src="js/petugas-absen.js"></script>
-
+<script>
+/* 🚫 BLOK AKSES SAAT BACK SETELAH LOGOUT */
+window.addEventListener("pageshow", function () {
+  if (!auth.currentUser) {
+    // jika user sudah logout, paksa kembali ke login
+    window.location.replace("index.html");
+  }
+});
+</script>
 </body>
 </html>
