--- a/index.html
+++ b/index.html
@@ -2,28 +2,25 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Absensi Teens & Youth Mundu</title>
-  <link rel="stylesheet" href="css/style.css">
+  <title>Login Absensi</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
-  <h2>Absensi Teens & Youth Mundu</h2>
+<h2>Login</h2>
 
-  <div class="card">
-    <input type="email" id="email" placeholder="Email">
-    <input type="password" id="password" placeholder="Password">
-    <button onclick="login()">LOGIN</button>
-    <p id="error"></p>
-  </div>
+<input id="email" placeholder="Email">
+<br>
+<input id="password" type="password" placeholder="Password">
+<br><br>
 
-  <!-- Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+<button onclick="login()">Login</button>
+<p id="error" style="color:red"></p>
 
-  <script src="js/firebase.js"></script>
-  <script src="js/auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+<script src="js/firebase.js"></script>
+<script src="js/login.js"></script>
+
 </body>
-
 </html>
