--- a/petugas-absen.html
+++ b/petugas-absen.html
@@ -30,8 +30,18 @@
   <h2 id="judulTanggal"></h2>
 
   <div class="card">
-    <div id="listAbsensi"></div>
-  </div>
+  <table class="tabel-absen">
+    <thead>
+      <tr>
+        <th>Nama Jemaat</th>
+        <th>Hadir</th>
+      </tr>
+    </thead>
+    <tbody id="listAbsensi">
+      <!-- Data diisi lewat JS -->
+    </tbody>
+  </table>
+</div>
 
   <!-- FIREBASE SDK (URUTAN WAJIB) -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
