--- a/petugas-absen.html
+++ b/petugas-absen.html
@@ -30,17 +30,17 @@
   <h2 id="judulTanggal"></h2>
 
   <div class="card">
-  <table class="tabel-absen">
-    <thead>
-      <tr>
-        <th>Nama Jemaat</th>
-        <th>Hadir</th>
-      </tr>
-    </thead>
-    <tbody id="listAbsensi">
-      <!-- Data diisi lewat JS -->
-    </tbody>
-  </table>
+  <div class="table-container">
+    <table class="tabel-absen">
+      <thead>
+        <tr>
+          <th>Nama Jemaat</th>
+          <th>Hadir</th>
+        </tr>
+      </thead>
+      <tbody id="listAbsensi"></tbody>
+    </table>
+  </div>
 </div>
 
   <!-- FIREBASE SDK (URUTAN WAJIB) -->
