--- a/petugas-absen.html
+++ b/petugas-absen.html
@@ -29,8 +29,8 @@
 
   <h2 id="judulTanggal"></h2>
 
-  <div class="card">
-  <div class="table-container">
+ <div class="card">
+  <div class="table-scroll">
     <table class="tabel-absen">
       <thead>
         <tr>
