--- a/petugas-absen.html
+++ b/petugas-absen.html
@@ -35,7 +35,7 @@
     id="inputNamaBaru"
     placeholder="Tambah nama anggota baru"
   />
-  <button onclick="tambahAnggota()">Tambah</button>
+  <button onclick="tambahAnggota()">Tambah Nama</button>
 </div>
 
 <!-- Pencarian nama -->
