--- a/petugas-tanggal.html
+++ b/petugas-tanggal.html
@@ -9,7 +9,10 @@
 
 <body>
 
-<button class="btn-logout" onclick="logout()">Logout</button>
+<div class="top-bar">
+  <button class="btn-back" onclick="history.back()">←</button>
+  <button class="btn-logout" onclick="logout()">Logout</button>
+</div>
 
 <h2 id="judulBulan"></h2>
 
