--- a/petugas-bulan.html
+++ b/petugas-bulan.html
@@ -9,8 +9,10 @@
 
 <body>
 
-  <!-- Tombol logout floating -->
+ <div class="top-bar">
+  <button class="btn-back" onclick="history.back()">←</button>
   <button class="btn-logout" onclick="logout()">Logout</button>
+</div>
 
   <h2>Pilih Bulan Ibadah</h2>
 
