--- a/petugas-absen.html
+++ b/petugas-absen.html
@@ -24,8 +24,10 @@
 
 <body>
 
-  <!-- Tombol logout floating -->
+<div class="top-bar">
+  <button class="btn-back" onclick="history.back()">←</button>
   <button class="btn-logout" onclick="logout()">Logout</button>
+</div>
 
   <h2 id="judulTanggal"></h2>
 <!-- Form tambah anggota -->
