--- a/petugas-absen.html
+++ b/petugas-absen.html
@@ -26,7 +26,7 @@
 
 <div class="top-bar">
   <button class="btn-back" onclick="history.back()">←</button>
-  <button class="btn-logout" onclick="logout()">Logout</button>
+  <button class="btn-logout-corner" onclick="logout()">Logout</button>
 </div>
 
   <h2 id="judulTanggal"></h2>
