--- a/petugas-tanggal.html
+++ b/petugas-tanggal.html
@@ -11,7 +11,7 @@
 
 <div class="top-bar">
   <button class="btn-back" onclick="history.back()">←</button>
-  <button class="btn-logout" onclick="logout()">Logout</button>
+  <button class="btn-logout-corner" onclick="logout()">Logout</button>
 </div>
 
 <h2 id="judulBulan"></h2>
