--- a/petugas-absen.html
+++ b/petugas-absen.html
@@ -25,8 +25,8 @@
 <body>
 
 <div class="top-bar">
-  <button class="btn-back" onclick="history.back()">←</button>
-  <button class="btn-logout-corner" onclick="logout()">Logout</button>
+  <button class="btn-back-corner" onclick="history.back()">←</button>
+<button class="btn-logout-corner" onclick="logout()">Logout</button>
 </div>
 
   <h2 id="judulTanggal"></h2>
