--- a/petugas-tanggal.html
+++ b/petugas-tanggal.html
@@ -10,8 +10,8 @@
 <body>
 
 <div class="top-bar">
-  <button class="btn-back" onclick="history.back()">←</button>
-  <button class="btn-logout-corner" onclick="logout()">Logout</button>
+ <button class="btn-back-corner" onclick="history.back()">←</button>
+<button class="btn-logout-corner" onclick="logout()">Logout</button>
 </div>
 
 <h2 id="judulBulan"></h2>
