--- a/petugas-bulan.html
+++ b/petugas-bulan.html
@@ -8,9 +8,7 @@
 </head>
 
 <body>
-
- <div class="top-bar">
-  <button class="btn-logout" onclick="logout()">Logout</button>
+ <button class="btn-logout-corner" onclick="logout()">Logout</button>
 </div>
 
   <h2>Pilih Bulan Ibadah</h2>
