--- a/petugas-tanggal.html
+++ b/petugas-tanggal.html
@@ -8,9 +8,12 @@
 </head>
 
 <body>
- <button class="btn-back-corner" onclick="history.back()">←</button>
-<button class="btn-logout-corner" onclick="logout()">Logout</button>
+<div class="header-corner">
+  <button class="btn-back-corner" onclick="history.back()">←</button>
+  <button class="btn-logout-corner" onclick="logout()">Logout</button>
 </div>
+
+<h2 id="judulTanggal"></h2>
 
 <h2 id="judulBulan"></h2>
 
