--- a/petugas-absen.html
+++ b/petugas-absen.html
@@ -23,9 +23,12 @@
 </head>
 
 <body>
+ <div class="header-corner">
   <button class="btn-back-corner" onclick="history.back()">←</button>
-<button class="btn-logout-corner" onclick="logout()">Logout</button>
+  <button class="btn-logout-corner" onclick="logout()">Logout</button>
 </div>
+
+<h2 id="judulTanggal"></h2>
 
   <h2 id="judulTanggal"></h2>
 <!-- Form tambah anggota -->
