--- a/petugas-bulan.html
+++ b/petugas-bulan.html
@@ -8,8 +8,11 @@
 </head>
 
 <body>
- <button class="btn-logout-corner" onclick="logout()">Logout</button>
+<div class="header-corner">
+  <button class="btn-logout-corner" onclick="logout()">Logout</button>
 </div>
+
+<h2 id="judulTanggal"></h2>
 
   <h2>Pilih Bulan Ibadah</h2>
 
