--- a/petugas-bulan.html
+++ b/petugas-bulan.html
@@ -2,69 +2,70 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pilih Bulan Ibadah</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
-<!-- Header kecil (tidak floating) -->
 <div class="header-corner">
   <button class="btn-logout-corner" onclick="logout()">Logout</button>
 </div>
 
-<h2>Pilih Bulan Ibadah</h2>
+<h2 id="judulTanggal"></h2>
+<br>
+  <h2>Pilih Bulan Ibadah</h2>
 
-<div class="card">
-  <div id="bulanContainer" class="bulan-grid"></div>
-</div>
+  <div class="card">
+    <div id="bulanContainer"></div>
+  </div>
 
-<!-- Firebase -->
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-<script src="js/firebase.js"></script>
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+  <script src="js/firebase.js"></script>
 
-<script>
-  // 🔐 AUTH CHECK HALAMAN BULAN
-  auth.onAuthStateChanged(user => {
-    if (!user) {
-      window.location.replace("index.html");
-      return;
+  <script>
+    // 🔐 AUTH CHECK KHUSUS HALAMAN BULAN
+    auth.onAuthStateChanged(user => {
+      if (!user) {
+        // jika sudah logout, jangan boleh lihat halaman bulan
+        window.location.replace("index.html");
+        return;
+      }
+
+      // ===== LOGIC HALAMAN BULAN =====
+      const bulan = [
+        "Januari", "Februari", "Maret", "April",
+        "Mei", "Juni", "Juli", "Agustus",
+        "September", "Oktober", "November", "Desember"
+      ];
+
+      const container = document.getElementById("bulanContainer");
+      container.innerHTML = "";
+
+      bulan.forEach((nama, index) => {
+        const btn = document.createElement("button");
+        btn.textContent = nama;
+        btn.style.display = "block";
+        btn.style.width = "100%";
+        btn.style.marginBottom = "10px";
+
+        btn.onclick = () => {
+          window.location.href = `petugas-tanggal.html?bulan=${index}`;
+        };
+
+        container.appendChild(btn);
+      });
+    });
+
+    function logout() {
+      auth.signOut().then(() => {
+        // replace = hapus halaman bulan dari history
+        window.location.replace("index.html");
+      });
     }
-
-    const bulan = [
-      "Januari", "Februari", "Maret", "April",
-      "Mei", "Juni", "Juli", "Agustus",
-      "September", "Oktober", "November", "Desember"
-    ];
-
-    const container = document.getElementById("bulanContainer");
-    container.innerHTML = "";
-
-    bulan.forEach((nama, index) => {
-      const item = document.createElement("div");
-      item.className = "bulan-item";
-
-      item.innerHTML = `
-        <div class="bulan-angka">${index + 1}</div>
-        <div class="bulan-nama">${nama}</div>
-      `;
-
-      item.onclick = () => {
-        window.location.href = \`petugas-tanggal.html?bulan=${index}\`;
-      };
-
-      container.appendChild(item);
-    });
-  });
-
-  function logout() {
-    auth.signOut().then(() => {
-      window.location.replace("index.html");
-    });
-  }
-</script>
+  </script>
 
 </body>
 </html>
