--- a/admin.html
+++ b/admin.html
@@ -1,58 +1,71 @@
-<meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
-<meta http-equiv="Pragma" content="no-cache">
-<meta http-equiv="Expires" content="0">
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin | Absensi Teens & Youth Mundu</title>
   <link rel="stylesheet" href="css/style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
 
-  <h2>Admin Dashboard</h2>
-  <p>Absensi Teens & Youth Mundu</p>
+<h2>Admin Dashboard</h2>
+<p>Absensi Teens & Youth Mundu</p>
 
- <div class="card">
-  <p><strong>Status:</strong> Login sebagai ADMIN</p>
+<div class="card">
 
-  <h3>Tambah Nama Jemaat</h3>
-  <input type="text" id="namaJemaat" placeholder="Nama Jemaat">
-  <button onclick="tambahJemaat()">Tambah</button>
+  <h3>Menu Admin</h3>
 
-   <hr>
-<h3>Laporan Kehadiran</h3>
-<button onclick="window.location.href='admin-laporan.html'">
-  Lihat Laporan Absensi
-</button>
+  <!-- Menu 1: Edit Nama Jemaat -->
+  <button
+    class="btn-full"
+    onclick="window.location.href='admin-jemaat.html'">
+    Edit Nama Jemaat
+  </button>
 
-  <h3>Daftar Jemaat</h3>
-  <ul id="listJemaat"></ul>
+  <!-- Menu 2: Laporan Kehadiran -->
+  <button
+    class="btn-full"
+    onclick="window.location.href='admin-laporan.html'">
+    Laporan Kehadiran
+  </button>
 
-  <br>
+  <hr>
+
   <button onclick="logout()">Logout</button>
 </div>
 
-  <!-- Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+<!-- Firebase -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 
-  <script src="js/firebase.js"></script>
-  <script src="js/admin.js"></script>
-</body>
-  <script>
-  window.addEventListener("pageshow", function (event) {
+<script src="js/firebase.js"></script>
+
+<script>
+  // 🔐 Proteksi halaman admin
+  auth.onAuthStateChanged(user => {
+    if (!user) {
+      window.location.replace("index.html");
+    }
+  });
+
+  function logout() {
+    auth.signOut().then(() => {
+      window.location.replace("index.html");
+    });
+  }
+
+  // Paksa reload jika dari cache (back button)
+  window.addEventListener("pageshow", event => {
     if (event.persisted) {
       window.location.reload();
     }
   });
 </script>
 
+</body>
 </html>
-
-
-
-
