--- a/admin-jemaat.html
+++ b/admin-jemaat.html
@@ -2,15 +2,10 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
-  <meta http-equiv="Pragma" content="no-cache">
-  <meta http-equiv="Expires" content="0">
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin | Edit Nama Jemaat</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
 
 <div class="header-corner">
@@ -27,17 +22,27 @@
     <input
       type="text"
       id="inputNama"
-      placeholder="Tambah nama jemaat"
+      placeholder="Tambah / Edit nama jemaat"
       onkeydown="if(event.key==='Enter') tambahJemaat()"
     >
-    <button onclick="tambahJemaat()">Tambah</button>
+    <button onclick="tambahJemaat()">Simpan</button>
     <p id="error" style="color:red;"></p>
   </div>
+
+  <!-- Search + Jumlah -->
+  <input
+    type="text"
+    id="searchJemaat"
+    class="input-search"
+    placeholder="Cari nama jemaat..."
+    oninput="filterJemaat()"
+  >
+  <p id="jumlahJemaat" style="font-size:14px; margin:6px 0;"></p>
 
   <hr>
 
   <!-- List Jemaat -->
-  <ul id="listJemaat" style="list-style:none; padding:0;"></ul>
+  <div id="listJemaat"></div>
 
 </div>
 
