--- a/admin.html
+++ b/admin.html
@@ -8,7 +8,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin | Absensi Teens & Youth Mundu</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/admin.css">
 </head>
 
 <body>
@@ -69,3 +69,4 @@
 
 </body>
 </html>
+
