--- a/petugas-absen.html
+++ b/petugas-absen.html
@@ -5,8 +5,7 @@
   <title>Absensi Ibadah</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="css/style.css">
-
+  <link rel="stylesheet" href="css/petugas.css">
   <style>
     /* Perbesar checkbox */
     input[type="checkbox"] {
