--- a/admin-jemaat.html
+++ b/admin-jemaat.html
@@ -49,10 +49,11 @@
   <hr>
 
   <!-- Header List -->
-  <div style="display:flex; justify-content:space-between; font-weight:600; font-size:14px; margin-bottom:6px;">
-    <span>Nama Jemaat</span>
-    <span>Aksi</span>
-  </div>
+  <div class="row-jemaat header-row">
+  <span class="col-nama">Nama Jemaat</span>
+  <span class="col-ranting">Ranting</span>
+  <span class="col-aksi">Aksi</span>
+</div>
 
   <!-- List Jemaat -->
   <div id="listJemaat"></div>
