--- a/admin-laporan.html
+++ b/admin-laporan.html
@@ -35,6 +35,10 @@
 
   <br><br>
 
+  <!-- RINGKASAN -->
+  <div id="ringkasanLaporan" style="font-weight:600; margin-bottom:8px;"></div>
+
+  <!-- TABEL LAPORAN -->
   <div id="laporan"></div>
 
 </div>
@@ -51,12 +55,13 @@
 
 <script src="js/admin-laporan.js"></script>
 
-</body>
-  <script>
-  window.addEventListener("pageshow", function (event) {
-    if (event.persisted) {
-      window.location.reload();
-    }
-  });
+<script>
+window.addEventListener("pageshow", function (event) {
+  if (event.persisted) {
+    window.location.reload();
+  }
+});
 </script>
+
+</body>
 </html>
