--- a/admin.html
+++ b/admin.html
@@ -34,6 +34,9 @@
     Laporan Kehadiran
   </button>
 
+  <button onclick="window.location.href='admin-followup.html'">
+  Follow Up
+</button>
   <hr>
 
   <button onclick="logout()">Logout</button>
@@ -69,4 +72,5 @@
 
 </body>
 </html>
+
 
